--- a/src/resources/views/managerMenu.hbs
+++ b/src/resources/views/managerMenu.hbs
@@ -427,3 +427,396 @@
         </div>
     </div>
 </div>
+<script>
+    const validate = function(e){
+        e.style.border = '1px solid gray'
+    }
+
+    document.addEventListener('click', function (event) {
+        var divEditForm = document.querySelector('.div-edit-form');
+        var divCreateForm = document.querySelector('.div-create-form');
+        var divCreateTableForm = document.querySelector('.div-create-form-table');
+
+        if (event.target == divEditForm) {
+            divEditForm.style.display = 'none';
+        }
+
+        if (event.target == divCreateTableForm) {
+            divCreateTableForm.style.display = 'none';
+        }
+
+        if (event.target == divCreateForm) {
+            divCreateForm.style.display = 'none';
+        }
+    });
+
+    function myFunction() {
+        var xs = document.querySelectorAll("#price");
+        xs.forEach(x=>{
+            if (x.value) {
+                var num = parseFloat(x.value.replace(/[^\d]/g, ''));
+                if (!isNaN(num)) {
+                    x.value = num.toLocaleString('vi-VN');
+                }
+            }
+        })
+    }
+
+    var xs = document.querySelectorAll("#price");
+    xs.forEach(priceInput => {
+        priceInput.addEventListener('input', function () {
+            let priceValue = priceInput.value;
+            priceValue = priceValue.replace(/[^0-9]/g, '');
+            priceInput.value = priceValue;
+        });
+    });
+
+
+
+    document.addEventListener('DOMContentLoaded',function(){
+
+        //sửa
+        const editBtns = document.querySelectorAll(".edit-button")
+        const divEditForm = document.querySelector('.div-edit-form')
+        const nameValue = document.querySelector('#edit-form #name')
+        const priceValue = document.querySelector('#edit-form #price')
+        var idProduct;
+        const closeBtn = document.querySelector('.close-form')
+
+        // sự kiện nhấn nút "Sửa"
+        editBtns.forEach(bt => {
+            bt.addEventListener('click', (e) => {
+                idProduct = e.target.dataset.id;
+                const nameProduct = e.target.dataset.name;
+                const priceProduct = e.target.dataset.price;
+
+                divEditForm.style.display = "block";
+
+                nameValue.value = nameProduct;
+                priceValue.value = priceProduct;
+            });
+        });
+
+        // sự kiện nhấn nút "Đóng"
+        closeBtn.addEventListener('click', () => {
+            divEditForm.style.display = "none";
+        });
+
+
+        //hành động sửa
+        const editChange = document.querySelector('#submit-edit');
+        const editForm = document.querySelector('#edit-form');
+
+        editChange.addEventListener('click', function (event) {
+            event.preventDefault(); // Ngăn chặn việc gửi form theo cách mặc định
+            editForm.setAttribute('method', 'POST'); // Thiết lập phương thức là POST
+            editForm.setAttribute('action', '/manager-menu/edit/' + idProduct + '?_method=PUT'); // Thiết lập action của form
+            if (nameValue.value && priceValue.value) {
+                editForm.submit(); // Gửi form một cách thủ công
+            }
+        });
+
+        //xóa món ăn
+        const deleteBtn = document.querySelector('#delete-product');
+        const deleteForm = document.querySelector('#delete-form');
+
+        deleteBtn.onclick = (e) => {
+            editForm.style.display = 'none';
+            e.preventDefault();
+
+            Swal.fire({
+                title: 'Bạn có chắc muốn xóa không?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#3085d6',
+                confirmButtonText: 'Xóa',
+                cancelButtonText: 'Hủy bỏ',
+                customClass: {
+                    container: 'custom-swal-container', // Thêm một lớp CSS tùy chỉnh
+                    popup: 'custom-swal-popup',
+                    confirmButton: 'custom-swal-confirm-button',
+                },
+            }).then((result) => {
+                // Hiển thị lại form sau khi alert đã được đóng
+                editForm.style.display = 'flex';
+
+                if (result.isConfirmed) {
+                    // Thực hiện xóa nếu người dùng chấp nhận
+                    deleteForm.action = "/manager-menu/" + idProduct + "?_method=POST";
+                    deleteForm.submit();
+                }
+            });
+        };
+
+
+
+        //search
+        var productsOne = [];
+        var items = document.querySelectorAll('.list-items .item');
+        items.forEach(function(item) {
+            var product = {};
+            var rl = item.querySelector('img').src.split('/');
+            const code  = rl[3] +"/"+ rl[rl.length-1]
+            product.code = code
+            product.name = item.querySelector('.decrip h4').textContent;
+            product.price = item.querySelector('.decrip p').textContent;
+            product._id = item.querySelector('.edit-button').dataset.id;
+            productsOne.push(product);
+        });
+
+        const removeDiacritics = function(str) {
+            return str.normalize("NFD").replace(/[\u0300-\u036f]/g, "").toLowerCase();
+        };
+
+
+        const listItems = document.querySelector('.list-items');
+        const btnSearch = document.querySelector('.fa-search');
+        const inputSearch = document.querySelector('.btn-search'); // Thêm đối tượng input
+
+        btnSearch.addEventListener('click', searchHandler);
+        inputSearch.addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                searchHandler();
+            }
+        });
+
+        function searchHandler() {
+            const searchValue = inputSearch.value;
+            if (searchValue) {
+                const productFilter = productsOne.filter(p => removeDiacritics(p.name).includes(removeDiacritics(searchValue)));
+                
+                Search(productFilter)
+            } else {
+                Search(productsOne);
+            }
+        }
+
+        const Search = function (products) {
+            console.log(products)
+            listItems.innerHTML = "";
+            if(products.length){
+                products.forEach(p => {
+                    const liChild = document.createElement('li');
+                    liChild.classList.add("item");
+                    liChild.innerHTML = `
+                        <img src="${p.code}" alt="">
+                        <div class="decrip">
+                            <h4>${p.name}</h4>
+                            <p>${p.price}</p>
+                            <button data-id="${p._id}" class="edit-button">Sửa</button>
+                        </div>
+                    `;
+                    listItems.appendChild(liChild);
+                });
+            }else{
+                listItems.innerHTML = `<p style="display: contents;">Không tìm thấy kết quả phù hợp</p>`;
+            }
+        };
+
+
+
+
+        //create-menu
+        const closeBtnCreate = document.querySelector('.close-create-form')
+        const createMenuBtn = document.querySelector('.create-menu')
+        const divCreateForm = document.querySelector('.div-create-form')
+        const createForm = document.querySelector('#create-form')
+        const submitBtnCreate = createForm.querySelector('#submit-create')
+        const inputFile = document.getElementById('img');
+
+
+        console.log(submitBtnCreate,inputFile.value)
+        createMenuBtn.addEventListener('click',()=>{
+            divCreateForm.style.display = "block"
+        })
+
+        closeBtnCreate.addEventListener('click',()=>{
+            divCreateForm.style.display= "none"
+        })
+
+
+        // Sự kiện kiểm tra tệp khi tải lên
+        // Tạo biến để theo dõi trạng thái của tệp tải lên
+        let isFileValid = false;
+
+        // Sự kiện kiểm tra tệp khi tải lên
+        inputFile.addEventListener('change', function () {
+            const filePath = inputFile.value;
+            const allowedExtensions = /(\.jpg|\.jpeg|\.png|\.gif)$/i;
+            if (!allowedExtensions.exec(filePath)) {
+                alert('Vui lòng tải lên tệp hình ảnh');
+                inputFile.value = '';
+                isFileValid = false;
+            } else {
+                isFileValid = true;
+            }
+        });
+
+
+        // Hành động tạo sản phẩm
+        submitBtnCreate.addEventListener('click', function (e) {
+            e.preventDefault();
+
+            const nameFood = document.querySelector('#create-form #name');
+            const priceFood = document.querySelector('#create-form #price');
+
+            if (isFileValid) {
+                if ( nameFood.value && priceFood.value) {
+                    createForm.action = "/manager-menu/create-product" + "?_medthod=POST";
+                    createForm.submit();
+                }else{
+                    if(!nameFood.value && priceFood.value){
+                        nameFood.style.border = '1px solid red'
+                    }else{
+                        if(!priceFood.value && nameFood.value){
+                            priceFood.style.border = '1px solid red'
+                        }
+                    }
+                }
+            }else{
+                inputFile.style.border = '1px solid red'
+            }
+        });
+    })
+
+    //Table
+
+    function showActions(button) {
+        var listItem = button.closest('li');
+        var editButton = listItem.querySelector('.edit-table');
+        var deleteButton = listItem.querySelector('.delete-table');
+        var h3Element = listItem.querySelector('h3');
+
+        // Hiển thị nút "Lưu" và "Xóa" cho mục đang được chọn
+        editButton.style.display = 'block';
+        deleteButton.style.display = 'block';
+
+        // Ẩn nút "Thao tác" khi nút "Sửa" được nhấp
+        button.style.display = 'none';
+
+        // Kích hoạt chế độ chỉnh sửa và đặt focus vào h3
+        h3Element.setAttribute('contenteditable', 'true');
+        h3Element.focus();
+    }
+
+    function hideAllEditButtons() {
+        var editButtons = document.querySelectorAll('.edit-table');
+        var deleteButtons = document.querySelectorAll('.delete-table');
+        var showButtons = document.querySelectorAll('.show-table');
+
+        editButtons.forEach(function (button) {
+            button.style.display = 'none';
+        });
+        deleteButtons.forEach(function (button) {
+            button.style.display = 'none';
+        });
+
+        showButtons.forEach(function (button) {
+            button.style.display = 'inline-block';
+        });
+
+    }
+
+    function saveEdit(button) {
+        var listItem = button.closest('li');
+        var editedName = listItem.querySelector('h3').textContent;
+        var idTable = button.dataset.table;
+
+        const editTableForm = document.createElement('form');
+        editTableForm.method = 'POST';
+        editTableForm.action = '/manager-menu/table/edit/'+idTable;
+        const submitForm = document.createElement('input');
+        const nameTableForm = document.createElement('input');
+        nameTableForm.value = editedName;
+        nameTableForm.style.display ='none';
+        nameTableForm.setAttribute('name', 'name');
+        submitForm.type = 'submit';
+        submitForm.style.display= 'none';
+        document.body.appendChild(editTableForm);
+        editTableForm.appendChild(submitForm);
+        editTableForm.appendChild(nameTableForm);
+        submitForm.click();
+        document.body.removeChild(editTableForm);
+
+        // Ẩn nút "Lưu" và hiển thị nút "Thao tác"
+        hideAllEditButtons();
+        listItem.querySelector('.show-table').style.display = 'inline-block';
+
+        // Tắt chế độ chỉnh sửa trên h3
+        listItem.querySelector('h3').removeAttribute('contenteditable');
+    }
+
+    function deleteTable(button) {
+        var idTable = button.dataset.table;
+        const statusTable = button.dataset.status;
+                    console.log(statusTable)
+        Swal.fire({
+                title: 'Bạn có chắc muốn xóa không?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#d33',
+                cancelButtonColor: '#3085d6',
+                confirmButtonText: 'Xóa',
+                cancelButtonText: 'Hủy bỏ',
+                customClass: {
+                    container: 'custom-swal-container', // Thêm một lớp CSS tùy chỉnh
+                    popup: 'custom-swal-popup',
+                    confirmButton: 'custom-swal-confirm-button',
+                },
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    const delTableForm = document.createElement('form');
+                    delTableForm.method = 'POST'; // Use POST method (you can also use DELETE method)
+                    delTableForm.action = "/manager-menu/table/" + idTable + '?_method=DELETE'; // Include the DELETE method parameter
+
+                    // Create an input element to mimic the behavior of submitting a form with a button
+                    const submitButton = document.createElement('input');
+                    submitButton.type = 'submit';
+                    submitButton.style.display = 'none'; 
+
+                    // Append the form and the input to the document body
+                    document.body.appendChild(delTableForm);
+                    delTableForm.appendChild(submitButton);
+
+                    if(statusTable === "true"){
+                        showToast("Bàn đang có người ngồi")
+                    }else{
+                        submitButton.click();
+                    }
+
+                    // Remove the form and the input from the document body after submission
+                    document.body.removeChild(delTableForm);
+                }
+            });
+    }
+
+    const createFormTable = document.querySelector('#create-form-table');
+    const divCreateTableForm = document.querySelector('.div-create-form-table')
+    console.log(createFormTable)
+    function createTable(){
+        divCreateTableForm.style.display='block'
+    }
+
+    function closeCreateTableForm(){
+        divCreateTableForm.style.display='none'
+    }
+
+    function submitCreateTable(e){
+        const nameTable = createFormTable.querySelector('#name');
+        if(nameTable.value){
+            createFormTable.action = 'manager-menu/table-create'
+            createFormTable.submit();
+        }
+    }
+
+    function showToast(message) {
+        var toast = document.getElementById("toast");
+        toast.innerHTML = message;
+        toast.className = "show";
+        setTimeout(function () {
+            toast.className = toast.className.replace("show", "");
+        }, 3000); // Hiển thị Toast trong 3 giây
+    }
+
+</script>
